[gd_scene load_steps=8 format=3 uid="uid://uij42thge1m2"]

[ext_resource type="Theme" uid="uid://cypnnlojt3rfg" path="res://ui/battle_preparation/unit_detailed_info/unit_detailed_info.tres" id="1_kw01t"]
[ext_resource type="Script" path="res://ui/battle_preparation/item_detailed_info/item_detailed_info.gd" id="2_v7mpq"]
[ext_resource type="PackedScene" uid="uid://cvigt8uh757tm" path="res://ui/battle_preparation/unit_detailed_info/weapon_icon_container.tscn" id="2_yah7p"]
[ext_resource type="Texture2D" uid="uid://2fn3ipsn7s7f" path="res://resources/sprites/items/iron_lance.tres" id="3_b05fy"]
[ext_resource type="PackedScene" uid="uid://bcteldqbxn7l0" path="res://ui/battle_preparation/item_detailed_info/weapon_stat_container.tscn" id="3_npevi"]

[sub_resource type="Theme" id="Theme_trk22"]
default_font_size = 36

[sub_resource type="Theme" id="Theme_6j0ny"]
default_font_size = 12

[node name="ItemDetailedInfo" type="Panel"]
custom_minimum_size = Vector2(250, 460)
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_kw01t")
script = ExtResource("2_v7mpq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 1.0
offset_top = 1.0
offset_right = 249.0
offset_bottom = 459.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ItemNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_trk22")
text = "Item Name"

[node name="WeaponIconContainer" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_yah7p")]
layout_mode = 2

[node name="ItemDescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
self_modulate = Color(0.509804, 0.509804, 0.509804, 1)
custom_minimum_size = Vector2(158, 72)
layout_mode = 2
theme = SubResource("Theme_6j0ny")
text = "Example description goes here, this box should be able to wrap and hold a fair amount of text for all differnt item types. If this text is being shown, there is an error."
autowrap_mode = 3

[node name="WeaponStatContainer" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_npevi")]
layout_mode = 2

[node name="ItemIcon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
offset_left = 184.0
offset_top = 23.0
offset_right = 248.0
offset_bottom = 87.0
texture = ExtResource("3_b05fy")
